--- a/gb/19/6/26/n11347020.md
+++ b/gb/19/6/26/n11347020.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/oesaqp3717/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oesaqp3717/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oesaqp3717/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oesaqp3717/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oesaqp3717/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oesaqp3717/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oesaqp3717/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oesaqp3717/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oesaqp3717/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oesaqp3717/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oesaqp3717/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oesaqp3717/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oesaqp3717/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oesaqp3717/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oesaqp3717/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oesaqp3717/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/oesaqp3717/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oesaqp3717/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/oesaqp3717/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oesaqp3717/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/oesaqp3717/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/oesaqp3717/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/oesaqp3717/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/oesaqp3717/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>稻草资源诚可贵 勿以燃烧来浪费</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/06/4368bd8c5c57d4ac12b996940573b384-600x400.jpg" />
 <h6>焚烧稻草烧掉农田有机质及微生物，增加有机肥使用，得不偿失。（宜兰环保局提供）
 </h6>
 <hr>
-<p>【大纪元2019年06月26日讯】（大纪元记者谢月琴台湾宜兰综合报导）稻作收割期已至，部分农友习惯将<ahref="https://github.com/oesaqp3717/djy/blob/master/gb/tag/%E5%86%9C%E4%B8%9A%E5%BA%9F%E5%BC%83%E7%89%A9.md#1">农业废弃物</a>就地直接<ahref="https://github.com/oesaqp3717/djy/blob/master/gb/tag/%E7%87%83%E7%83%A7.md#1">燃烧</a>处理，但露天燃烧不仅会影响居住环境的空气品质及人体身体健康，也会引起公共安全及影响行车视线。</p>
-<p>宜兰县政府环保局表示，县府已于2015年3月26日公告本县辖内禁止田野引火<ahref="https://github.com/oesaqp3717/djy/blob/master/gb/tag/%E7%87%83%E7%83%A7.md#1">燃烧</a>之易致火灾行为，如查获露天燃烧行为，且产生明显粒状污染物影响居住环境，将依“空气污染防制法”规定，可裁处新台币1,200元以上、10万元以下罚锾，若违反者为工商厂、场者，则处10万元以上至100万以下罚锾。如果因浓烟引发车祸或造成人员伤亡，还会涉及公共危险罪嫌，要被移送法办，实在得不偿失。</p>
-<p>环保局近一步说明，<ahref="https://github.com/oesaqp3717/djy/blob/master/gb/tag/%E7%A8%BB%E8%8D%89.md#1">稻草</a>是可以重复利用的自然资源，研究指出稻草需经过微生物腐化才能转变成肥份，直接焚烧稻草会破坏表土的微生物相，反而将农田有机质全烧掉，且燃烧稻草不仅会影响空气品质，若涉及行车安全，造成车祸伤亡，还会涉及刑事责任。</p>
-<p>环保局呼吁农友应以回收或堆肥等其他方式处理<ahref="https://github.com/oesaqp3717/djy/blob/master/gb/tag/%E7%A8%BB%E8%8D%89.md#1">稻草</a>，例如将稻草斩碎拌入土中，利用其分解之有机质作为天然肥料，提高土壤的肥沃度，可以减少使用化学肥料，再行整地插秧作业，间接节省成本，一举数得。另一方面，稻草也可再利用作为田间畦面敷盖，来培育作物，不但达到资源再利用外也降低燃烧稻草污染空气情形，为环境节能减碳及永续发展尽一分力，此外，稻草可作为传统草席与工艺品编织等用途，同时推动宜兰在地文化。</p>
+<p>【大纪元2019年06月26日讯】（大纪元记者谢月琴台湾宜兰综合报导）稻作收割期已至，部分农友习惯将<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%86%9C%E4%B8%9A%E5%BA%9F%E5%BC%83%E7%89%A9.md#1">农业废弃物</a>就地直接<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%87%83%E7%83%A7.md#1">燃烧</a>处理，但露天燃烧不仅会影响居住环境的空气品质及人体身体健康，也会引起公共安全及影响行车视线。</p>
+<p>宜兰县政府环保局表示，县府已于2015年3月26日公告本县辖内禁止田野引火<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%87%83%E7%83%A7.md#1">燃烧</a>之易致火灾行为，如查获露天燃烧行为，且产生明显粒状污染物影响居住环境，将依“空气污染防制法”规定，可裁处新台币1,200元以上、10万元以下罚锾，若违反者为工商厂、场者，则处10万元以上至100万以下罚锾。如果因浓烟引发车祸或造成人员伤亡，还会涉及公共危险罪嫌，要被移送法办，实在得不偿失。</p>
+<p>环保局近一步说明，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A8%BB%E8%8D%89.md#1">稻草</a>是可以重复利用的自然资源，研究指出稻草需经过微生物腐化才能转变成肥份，直接焚烧稻草会破坏表土的微生物相，反而将农田有机质全烧掉，且燃烧稻草不仅会影响空气品质，若涉及行车安全，造成车祸伤亡，还会涉及刑事责任。</p>
+<p>环保局呼吁农友应以回收或堆肥等其他方式处理<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A8%BB%E8%8D%89.md#1">稻草</a>，例如将稻草斩碎拌入土中，利用其分解之有机质作为天然肥料，提高土壤的肥沃度，可以减少使用化学肥料，再行整地插秧作业，间接节省成本，一举数得。另一方面，稻草也可再利用作为田间畦面敷盖，来培育作物，不但达到资源再利用外也降低燃烧稻草污染空气情形，为环境节能减碳及永续发展尽一分力，此外，稻草可作为传统草席与工艺品编织等用途，同时推动宜兰在地文化。</p>
 <p>环保局长周锡福提醒，露天燃烧稻草不但触法更危害到宜兰县的环境品质，希望农民不要浪费了这好用的资源，使稻草肥份能回归农地，有助于农业资源循环利用，也维护宜县空气品质。</p>
 <p>责任编辑：英祯</p>
 
@@ -17,48 +17,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/17/6/21/n9288498.md#1">不露天燃烧稻草  云嘉南建立利用平台</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/17/11/14/n9837759.md#1">台肥推有机肥料  有效分解稻草取代燃烧</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/17/12/19/n9972669.md#1">抗空污 农粮署反对农民露天燃烧稻草</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/18/12/20/n10922281.md#1">空品不良季节报到   屏环保局吁做好自我防护</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/19/5/22/n11272552.md#1">农废高值化 工研院技转台商新南向打天下</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/29/n12583223.md#1">全障运百公尺跨栏 台中许乐破听奥世界纪录</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/29/n12583124.md#1">纵谷画布花海迎宾 农粮署备40公吨种子</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/29/n12583056.md#1">基市议员张秉钧与妮可美丽合办骨质密度义诊</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/29/n12583014.md#1">基市海上吸尘器竞赛  学生化身科技环保尖兵</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/29/n12582450.md#1">国际移民嘉年华 兰阳新家好生活</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/6/21/n9288498.md#1">不露天燃烧稻草  云嘉南建立利用平台</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/11/14/n9837759.md#1">台肥推有机肥料  有效分解稻草取代燃烧</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/12/19/n9972669.md#1">抗空污 农粮署反对农民露天燃烧稻草</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/20/n10922281.md#1">空品不良季节报到   屏环保局吁做好自我防护</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/5/22/n11272552.md#1">农废高值化 工研院技转台商新南向打天下</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615950.md#1">探访宜兰市中山公园内百年古迹~献馘碑</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615945.md#1">宜兰县班班有冷气全面测试完成</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615863.md#1">基隆快捷公车便民再+1 关键交通部相关措施解套</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613153.md#1">打火英雄荣获凤凰奖  林右昌感谢警义消奉献</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610962.md#1">228纪念仪式  蔡英文：转型正义迈向新里程</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/2/n10186094.md#1" target="_blank">林辉：天安门杀毛案疑点重重 侦案者冤狱七年</a></li><li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11489359.md#1" target="_blank">法轮功洪传欧洲 多族裔民众：找到生命意义</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/3/n11564392.md#1" target="_blank">凌晓辉：当代人类的天书（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/2/n11494502.md#1" target="_blank">探寻东方养生道 希腊青年在修炼中得到升华</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/26/n12576644.md#1">木星与土星在冬至相合 800年来罕见天象</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/25/n12575381.md#1">救命之恩 “新世纪影视”演员感恩李洪志大师（中）</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/2/n12519137.md#1">三岁男童找到前世子女  胎记前世记忆揭秘</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/20/n12563807.md#1">《诸世纪》中第一个“反救世主”魔鬼是谁？</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/10/27/n12504603.md#1">【命理】古今实例：富贵命是怎样来的？</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/29/n12583114.md#1">【大陆新闻解毒】时事小品：美大选有盼头</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/29/n12583177.md#1">【严真点评】乔州现“内鬼”华府揪出大鳄</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/28/n12582063.md#1">【直播预告】亚利桑那议会举行选举诚信听证会</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/28/n12580663.md#1">美议员：通过州代表团投票 川普可赢得连任</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/28/n12581024.md#1">鲍威尔转推机器更改选票短视频 震惊美国人</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/28/n12581019.md#1">【拍案惊奇】川普酝酿大抓捕？左媒白宫撒泼</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/27/n12580299.md#1">吴秀波小三狱中近况曝光 遭拴铁链成严管对象</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/28/n12581592.md#1">2020 AAA颁奖直播问题多 BTS与TWICE等夺大奖</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/27/n12579270.md#1">余苑绮抗癌路艰辛 泪曝遗书：下辈子再当家人</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/27/n12580607.md#1">黄秋生主持美食交友节目 曝光入籍台湾进度</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/27/n12579399.md#1">江宏杰夫妇PK桌球吸睛 台运动实境节目收视飙</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/28/n12580877.md#1">车评：是仪表还是萤幕！？ 2020 M-Benz GLB250</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/24/n12572282.md#1">美研发新癌症疫苗 杀癌或比药有效 明年人体试验</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/29/n12582680.md#1">喝养乐多铝箔纸要戳洞或撕开？ 业者告诉你</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/23/n12570471.md#1">3种豆煮汤喝去湿气 中医妙方击退湿疹、干癣</a></li>
-<li><a href="https://github.com/oesaqp3717/djy/blob/master/gb/20/11/25/n12574800.md#1">大白菜防癌、解毒又助消化 挑选留意1重点</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614217.md#1">【财商天下】被踢出SWIFT 俄金融迅速“休克”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/oesaqp3717/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/oesaqp3717/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/6/26/n11347020.htm">稻草资源诚可贵 勿以燃烧来浪费</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/6/26/n11347020.htm">稻草资源诚可贵 勿以燃烧来浪费</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/oesaqp3717/djy/blob/master/gb/19/6/26/n11347020.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/oesaqp3717/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/oesaqp3717/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/oesaqp3717/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/oesaqp3717/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/oesaqp3717/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/oesaqp3717/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/oesaqp3717/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/oesaqp3717/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/oesaqp3717/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/oesaqp3717/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/oesaqp3717/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/oesaqp3717/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/oesaqp3717/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/oesaqp3717/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/oesaqp3717/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/oesaqp3717/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/oesaqp3717/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/oesaqp3717/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/oesaqp3717/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/oesaqp3717/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/oesaqp3717/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/oesaqp3717/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/oesaqp3717/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/oesaqp3717/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oesaqp3717/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/6/26/n11347020.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
